<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charcoal"
    tools:context=".ui.view.activites.MainActivity">

    <ImageView
        android:id="@+id/background_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fifth_location"
        android:contentDescription="@string/details_background_image_description"
        />

    <TextView
        android:id="@+id/details_title"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/details_title"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/details_description"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        android:layout_width="270dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/details_description"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/details_schedule_button"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:textSize="20sp"
        android:background="@drawable/rounded_corners_pink"
        android:textColor="@color/white"
        android:text="@string/details_button"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:id="@+id/parent_bottom_sheet"
        android:background="@drawable/rounded_corners"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/parent_bottom_sheet_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/parent_bottom_sheet_text"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <Button
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="16dp"
            android:id="@+id/parent_bottom_sheet_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:text="@string/parent_bottom_sheet_button"
            android:background="@drawable/rounded_corners_pink"/>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/child_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="580dp"
                android:background="@drawable/rounded_corners_charcoal"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <TextView
                    android:id="@+id/child_bottom_sheet_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/child_bottom_sheet_text"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:visibility="gone"/>

                <Button
                    android:visibility="gone"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginTop="16dp"
                    android:id="@+id/child_bottom_sheet_button"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:text="@string/child_bottom_sheet_button"
                    android:background="@drawable/rounded_corners_pink"/>

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:id="@+id/sub_child_bottom_sheet"
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:background="@drawable/rounded_corners"
                        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                        <Button
                            android:visibility="gone"
                            android:layout_gravity="top|center_horizontal"
                            android:layout_marginTop="16dp"
                            android:id="@+id/sub_child_bottom_sheet_button"
                            android:layout_width="200dp"
                            android:layout_height="50dp"
                            android:textColor="@color/white"
                            android:text="@string/sub_child_bottom_sheet_button"
                            android:background="@drawable/rounded_corners_pink"/>

                    </FrameLayout>

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

            </FrameLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>